	* O(1) access time for parameters in edje_cc_handler.
	* Recycle and use less memory during load time.

2012-09-11  Carsten Haitzler (The Rasterman)

        * Improve memory footprint by cutting core edje real part
        struct down by less than half its size and making some parts allocated
        extra only if the type needs it.

2012-09-12  Cedric Bail

	* Small improvement in memory footprint by using an array instead of a list for
	some callback list.

2012-09-17  Cedric Bail

	* Don't generate an annotate file if edje_cc failed.

2012-09-17  Michael Bouchaud (yoz)

        * fix group inheritance on a group who have a script with global
        varable.
        * fix group inheritance on a group who have some programs uses script

2012-09-20  David Seikel (onefang)

	* Lua: Lua 5.2 support added.

2012-09-21  Flavio Ceolin

	* edje_codegen: added support for externals

2012-09-27  Michael Bouchaud (yoz)

        * fix scale_set in sub group

2012-09-27  Flavio Ceolin

	* edje_codegen: adding support for draggable

2012-10-10

	* edje_entry: Add more tags(preedit_sub1~4) for a variety of preediting states.

2012-10-21 Daniel Zaoui

	* Edje: change Edje to use Eo.
	This change adds Eo support to Edje while keeping the old API intact.
	For more information, go to Eo.

2012-10-26  Michael Bouchaud (yoz)

        * fix edje_object_scale_set with edje containing boxes and/or tables

2012-10-31  Carsten Haitzler (The Rasterman)

        * Fix edje_cc to use max compression, not default compression.

2012-10-31  ChunEon Park (Hermet)

        * Fix to update the text classes when text classes are changed.

2012-11-02  ChunEon Park (Hermet)

        * Fix to not update map uv for proxy

2012-11-15  Daniel Willmann

        * Add embryo function get_image_id

2012-11-23  Bruno Dilly

        * Support message sending on edje player.

2012-11-23  Eduardo Lima (Etrunko)

        * Add embryo function get_program_id

2012-12-05  Robert David

	* Fix Solaris 11 build.