@@ -33,3 +33,4 @@ Flavio Ceolin <flavio.ceolin@profusion.mobi>
 Daniel Zaoui <daniel.zaoui@yahoo.com>
 Daniel Willmann <d.willmann@samsung.com>
 Robert David <robert.david.public@gmail.com>
+Bluezery <ohpowel@gmail.com>
