@@ -30,6 +30,7 @@ Fixes:
     * fix edje_text_class_set to update the text classes correctly.
     * fix to not update map uv for proxy
     * fix build on Solaris 11.
+    * fix duplicate after programs in group inheritance.
 
 Edje 1.7.0
 
